<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detail_activity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/exo_player_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/recipe_step_fragment_exoplayer_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="300dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_activity_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />


            <TextView
                android:id="@+id/detail_activity_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/button_bar"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp">

                <Button
                    android:id="@+id/button_previous"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previous" />

                <Button
                    android:id="@+id/button_next"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
